<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JErgometer for Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="power">Power</string>
    <string name="heartrate">Heartrate</string>
    <string name="time">Time</string>
    <string name="RPM">RPM</string>
    <string name="trip">Trip</string>
    <string name="stop_button">Stop Button</string>
    <string name="start_button">Start Button</string>

</resources>
